# cost-optimization-scanner

./: .gitignore  ARCHITECTURE.md  AWS_SERVICES_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  Refactor_plan.md  TECHNICAL_DOCUMENTATION.md  cli.py  cost_optimizer.py  html_report_generator.py  pyproject.toml  reporter_phase_a.py  reporter_phase_b.py  requirements-dev.txt
.impeccable/: CLAUDE.md  design.json
core/: CLAUDE.md  __init__.py  client_registry.py  contracts.py  filtering.py  pricing_engine.py  result_builder.py  scan_context.py  scan_orchestrator.py  session.py  trend_analysis.py
docs/: AI_COST_OPTIMIZATION_PLAN.md  AUDIT_ACTION_PLAN.md  AUDIT_PROMPT.md  LIVE_PRICING_IMPL_PROMPT.md  LIVE_PRICING_PLAN.md  Makefile  NETWORK_AUDIT_PROMPT.md  PLAN.md  README.md  ROADMAP.md  SERVICE_AUDIT_PROMPT.md  UI_UX_AUDIT_AND_ENHANCEMENT_PROMPT.md  advanced_usage.md  api_reference.md  architecture.md  conf.py  index.md  quickstart.md  troubleshooting.md
services/: CLAUDE.md  __init__.py  _aws_errors.py  _base.py  _coh_dedup.py  _reconcile.py  _savings.py  advisor.py  ami.py  api_gateway.py  apprunner.py  athena.py  aurora_logic.py  backup.py  batch_svc.py  cloudfront.py  commitment_coverage.py  commitment_logic.py  containers.py  containers_logic.py  dms.py  dynamodb.py  ebs.py  ebs_logic.py  ec2.py  efs_fsx.py  elastic_ip.py  elasticache.py  file_systems_logic.py  glue.py  lambda_svc.py  lightsail.py  load_balancer.py  mediastore.py  monitoring.py  msk.py  nat_gateway.py  opensearch.py  quicksight.py  rds.py  (+8 more)
(+250 files in other folders)
